registry/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: registry
  namespace: docker-registry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry
        ports:
        - containerPort: 5000
