registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: docker-registry
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: registry
