registry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: docker-registry
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "pdxhome-issuer"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
  - hosts:
    - docker-registry.pdxhome.greghaynes.net
    secretName: docker-registry-cert
  rules:
  - host: docker-registry.pdxhome.greghaynes.net
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: 5000
